<resources>
    <string name="app_name">SoundPlayer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_mylist">My List</string>
    <string name="action_search">Search</string>

    <string name="menu_title">Title</string>
    <string name="menu_artist">Artist</string>
    <string name="menu_album">Album</string>
    <string name="menu_genre">Genre</string>
</resources>
